release 1.0.3 (2009-03/04)
- Fixed issue 207
  https://jersey.dev.java.net/issues/show_bug.cgi?id=207
  The loading of resources uses the Thread.currentThread().getContextClassLoader()
  and loads resources using loader.getResourceAsStream().

release 1.0.2 (2009-02-11)
- JSON specific configuration options moved to a new JSONConfiguration class
  See JavaDoc for:
    com.sun.jersey.api.json.JSONConfiguration
- Added new NATURAL JSON notation
  Requires JAXB-RI impl 2.1.10
  When the new notation is used, users do not need any more 
  to take care about configurating proper serialization of arrays, numbers and booleans in JSON
- Fixed issue 180
  https://jersey.dev.java.net/issues/show_bug.cgi?id=180
  Support JSON with Padding.
  See JavaDoc for:
    com.sun.jersey.api.json.JSONWithPadding
- Support the setting of a javax.ws.rs.core.SecurityContext implementation
  on com.sun.jersey.spi.container.ContainerRequest. This allows implementations,
  such as a request filter, to override the supply authorization logic in
  combination with the @RolesAllowed annotation and the
  com.sun.jersey.api.container.filter.RolesAllowedResourceFilterFactory.
- Fixed issue 160
  https://jersey.dev.java.net/issues/show_bug.cgi?id=160
  Added support for setting HTTPS properties (HostnameVerifier and SSLContext)
  when the Jersey Client with HttpsURLConnection. See JavaDoc of:
    com.sun.jersey.client.urlconnection.HTTPSProperties
- Added support when using the Jersey client for a factory to create
  HttpURLConnection or HttpsURLConnection. See JavaDoc of:
    com.sun.jersey.client.urlconnection.URLConnectionClientHandler
    com.sun.jersey.client.urlconnection.HttpURLConnectionFactory
- Fixed issue 80
  https://jersey.dev.java.net/issues/show_bug.cgi?id=80
  The class and package registration mechanisms for root resource classes
  and providers works correctly on the JBoss 5.x app server.
- The ResourceDoclet (generating a resourcedoc file for extended WADL) moved